git-ops/infra/prometheus-community/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "61.77.247.3/32"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - grafana.archainia.app
        - prometheus.archainia.app
        - alertmanager.archainia.app
      secretName: archainia-wildcard-tls

  rules:
    - host: grafana.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-community-grafana
                port:
                  number: 9091

    - host: prometheus.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-community-kube-prometheus
                port:
                  number: 9090

    - host: alertmanager.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-community-kube-alertmanager
                port:
                  number: 9093
